--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@
     --transparent: rgba(0, 0, 0, 0);
     --shadow-buy: #367315;
     --shadow-services-button: #405069;
+    --range-controls: #D7DCDE;
+    --range-controls-bar:#00ca74;
+    --shadow-controls: #cfcfcf;
 
   /* :hover */
     --green-hover: #5FBB2D;
@@ -164,7 +167,7 @@ body {
   .header-search-input:active,
   .header-search-input:focus {
     background: var(--basic-white);
-    outline: none !important;
+    outline: none;
   }
 
   .header-link-bookmarks{
@@ -276,7 +279,7 @@ body {
     font-weight: bold;
     font-size: 21px;
     line-height: 30px;
-    padding: 6px 43px 8px 73px;
+    padding: 6px 40px 8px 73px;
   }
 
   .header-tel::before {
@@ -646,7 +649,7 @@ body {
   .main-promo-slider-controls1:focus,
   .main-promo-slider-controls2:active,
   .main-promo-slider-controls2:focus {
-    outline: none !important;
+    outline: none;
     }
 
   .link-button {
@@ -754,7 +757,7 @@ body {
   .button-product-buy:active,
   .button-product-buy:focus {
     background: var(--button-product-active);
-    outline: none !important;
+    outline: none;
   }
 
   .button-product-buy::before {
@@ -794,7 +797,7 @@ body {
   .button-product-bookmarks:active,
   .button-product-bookmarks:focus {
     opacity: 0.5;
-    outline: none !important;
+    outline: none;
   }
 
   .main-product-item-link {
@@ -936,7 +939,7 @@ body {
     line-height: 30px;
     color: var(--basic-white);
     background-color: var(--basic-blue);
-    outline: none !important;
+    outline: none;
     border: 0;
     box-shadow: 0px 1px 0px var(--basic-dark-blue), inset 0px 1px 0px var(--shadow-services-button);
   }
@@ -1347,6 +1350,7 @@ body {
     color: var(--basic-white);
     text-align: center;
     line-height: 32px;
+    border: 0;
   }
 
   .modal-map {
@@ -1427,19 +1431,38 @@ body {
     background: var(--basic-white);
   }
 
-  .header-section-centr-name a {
+  .header-section-centr-name-a {
+    display: flex;
     font-family: Cuprum, Arial, sans-serif;
     font-size: 21px;
     line-height: 21px;
     color: var(--basic-black);
   }
 
-  .header-section-centr-name a:hover {
+  .header-section-centr-name-a:hover {
     color: var(--basic-black);
   }
 
-  .header-section-centr-name a:active {
+  .header-section-centr-name-a:active {
     color: var(--basic-gray3);
+  }
+
+  .header-section-centr-name-avatar {
+    margin-right: 21px;
+  }
+
+  .header-section-centr-name-exit {
+    margin-left: 21px;
+  }
+
+  .header-section-centr-name-avatar:hover path,
+  .header-section-centr-name-exit:hover path {
+    fill: var(--login-link-hover);
+  }
+
+  .header-section-centr-name-avatar:active path,
+  .header-section-centr-name-exit:active path {
+    fill: var(--basic-gray3);
   }
 
   .header-section-centr-account {
@@ -1470,6 +1493,7 @@ body {
 
   .breadcrumbs {
     display: flex;
+    flex-wrap: wrap;
     grid-column: 1 / -1;
     margin: 21px 0 0 0;
     padding: 0;
@@ -1483,6 +1507,32 @@ body {
     font-size: 13px;
     line-height: 18px;
     text-transform: uppercase;
+  }
+
+  .breadcrumbs-icon-home {
+    width: 14px;
+    height: 12px;
+    margin-top: 2px;
+    background-image: url("../img/icon-home.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
+
+  .breadcrumbs-item:not(:first-child) {
+    position: relative;
+    margin-left: 41px;
+  }
+  
+  .breadcrumbs-item:not(:first-child)::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: -25px;  
+    width: 8px;
+    height: 12px;
+    background-image: url("../img/icon-right-small.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
   }
 
   .box-h1 {
@@ -1523,7 +1573,79 @@ body {
     padding: 0;
   }
 
-  .main-filter p {
+  .range-controls {
+    position: relative;
+    height: 41px;
+    background-color: var(--basic-light-pink);
+    border-radius: 5px;
+    margin-top: 11px;
+    margin-bottom: 9px;
+    padding-top: 39px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  .range-controls .scale {
+    height: 2px;
+    background: var(--range-controls);
+  }
+  
+  .range-controls .bar {
+    width: 70%;
+    height: 2px;
+    background: var(--range-controls-bar);
+  }
+
+  .range-controls .toggle {
+    position: absolute;
+    top: 31px;
+    left: 0;
+    width: 4px;
+    height: 4px;
+    padding: 0;
+    border: 8px solid var(--basic-white);
+    background-color: var(--basic-gray5);
+    border-radius: 50%;
+    box-shadow: 0 2px 1px 0 var(--shadow-controls);
+    cursor: pointer;
+  }
+
+  .range-controls .toggle-min {
+    left: 18px;
+  }
+  
+  .range-controls .toggle-max {
+    left: 145px;
+  }
+
+  .price-controls label {
+    font-family: PT Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 18px;
+    text-transform: uppercase;
+    color: var(--basic-black);
+  }
+
+  .price-controls input {
+    width: 95px;
+    height: 38px;
+    text-align: center;
+    color: var(--basic-black);
+    border: none;
+    border-radius: 5px;
+    background: var(--basic-light-pink);  
+    font-family: inherit;
+    font-size: inherit;
+  }
+
+  .price-controls {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .main-filter-form legend {
     font-family: PT Sans, Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -1531,6 +1653,131 @@ body {
     line-height: 30px;
     text-transform: uppercase;
     color: var(--basic-black);
+  }
+
+  .filter-option {
+    font-family: PT Sans, Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: var(--basic-black);
+  }
+
+  .filter-section:first-child {
+    border: none;
+    padding: 0;
+    margin: 14px 0 0 0;
+  }
+
+  .filter-section:not(:first-child) {
+    position: relative;
+    border: none;
+    padding: 0;
+    margin: 43px 0 0 0;
+  }
+
+  .filter-section:not(:first-child)::before {
+    content: "";
+    position: absolute;
+    top: -18px;
+    left: 0px;  
+    width: 220px;
+    height: 1px;
+    background-image: url("../img/Object.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
+
+  .filter-checkbox-list {
+    padding: 0;
+    margin: 18px 0 0 35px;
+    list-style: none;
+  }
+
+  .filter-checkbox:not(:first-child) {
+    margin-top: 20px;
+  }
+
+  .filter-radio:not(:first-child) {
+    margin-top: 22px;
+  }
+
+  .filter-radio-list {
+    padding: 0;
+    margin: 23px 0 0 35px;
+    list-style: none;
+  }
+
+  .filter-option label {
+    position: relative;
+    display: block;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .filter-input-checkbox:not(:checked) + label::before {
+    content: "";
+    position: absolute;
+    left: -35px;
+    top: -3px;
+    width: 19px;
+    height: 19px;
+    border: 2px solid var(--basic-gray3);
+    border-radius: 3px;
+  }
+
+  .filter-input-radio + label::before {
+    content: "";
+    position: absolute;
+    left: -35px;
+    top: -3px;
+    width: 17px;
+    height: 17px;
+    border: 4px solid var(--basic-gray3);
+    border-radius: 50%;
+  }
+
+  .filter-input-radio:checked + label::after {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: -27px;
+    width: 9px;
+    height: 9px;
+    background-color: var(--basic-gray3);
+    border-radius: 50%;
+  }
+  
+
+  .filter-input-checkbox:checked + label::after {
+    content: "";
+    position: absolute;
+    left: -35px;
+    top: -3px;
+    width: 26.17px;
+    height: 23px;
+    background-image: url("../img/checkbox-on.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
+
+  .main-filter-form-button {
+    width: 220px;
+    height: 38px;
+    background: var(--basic-white);
+    border: 1px solid var(--basic-gray8);
+    box-sizing: border-box;
+    margin-top: 37px;
+    font-family: PT Sans, Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 18px;
+    color: var(--basic-black);
+    text-transform: uppercase;
+    cursor: pointer;
   }
 
   .box-sort {
