--- a/css/style.css
+++ b/css/style.css
@@ -726,9 +726,19 @@ body {
   }
 
   .container-button-product {
-    display: flex;
+    position: absolute;
+    display: none;
     flex-direction: column;
+    width: 190px;
+    height: 170px;
+    top: 9px;
+    left: 15px;
+    background-color: var(--basic-white);
     align-items: center;
+  }
+
+  .main-product-item:hover .container-button-product {
+    display: flex;
   }
 
   .button-product-buy {
