--- a/css/style.css
+++ b/css/style.css
@@ -419,12 +419,7 @@ body {
 
   .main-promo-list {
     display: grid;
-    grid-template-columns: repeat(3, 300px);
-    grid-template-rows: repeat(3, minmax(123px, 1fr));
-    grid-template-areas:
-    "promo-materials promo-instrument promo-technic"
-    "main-promo-slider main-promo-slider promo-sale"
-    "main-promo-slider main-promo-slider promo-delivery";
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
     margin: 0;
     padding: 0;
@@ -434,9 +429,10 @@ body {
   .main-promo-item {
     display: flex;
     position: relative;
+	  box-sizing: border-box;
     flex-direction: column;
     width: 300px;
-    min-height: 123px;
+	  padding: 15px 20px;
     color: var(--basic-white);
     overflow: hidden;
   }
@@ -466,52 +462,49 @@ body {
     position: absolute;
     background-repeat: no-repeat;
     background-position: 0 0;
+    top: 50%;
+	  right: 70px;
+	  transform: translate(50%, -50%);
   }
 
   .promo-materials::before {
     width: 44px;
     height: 65px; 
     background-image: url("../img/icon-1.svg");
-    top: 31px;
-    left: 213px; 
   }
 
   .promo-instrument::before {
     width: 75px;
     height: 61px;
     background-image: url("../img/icon-2.svg");
-    top: 34px;
-    left: 194px; 
   }
 
   .promo-technic::before {
     width: 78px;
     height: 62px; 
     background-image: url("../img/icon-3.svg");
-    top: 32px;
-    left: 191px; 
   }
 
   .promo-sale::before {
     width: 59px;
     height: 72px; 
     background-image: url("../img/icon-4.svg");
-    top: 26px;
-    left: 196px; 
   }
 
   .promo-delivery::before {
     width: 78px;
     height: 63px; 
     background-image: url("../img/icon-5.svg");
-    top: 32px;
-    left: 191px; 
   }
 
   .main-promo-slider {
     position: relative;
     width: 620px;
     height: 266px;
+    grid-column-start: 1;
+	  grid-column-end: 3;
+	  grid-row-start: 2;
+	  grid-row-end: 4;
   }
 
   .slide-header {
@@ -519,30 +512,31 @@ body {
   }
 
   .main-promo-item h2 {
-    margin: 20px 50px 0 23px;
     font-size: 24px;
     line-height: 30px;
     font-weight: 700px;
+    margin: 0;
+    margin-bottom: 15px;
+    width: 135px;
   }
 
   .main-promo-buttom {
-    Width: 135px;
-    height: 38px;
-    margin: 14px 0 0 23px;
+    width: 135px;
+    font-size: 14px;
+    line-height: 18px;
     text-align: center;
-    line-height: 38px;
     background: var(--promo-buttom);
     text-transform: uppercase;
+    padding: 10px 21px;
+    box-sizing: border-box;
     color: var(--basic-white);
   }
 
   .promo-materials {
-    grid-area: promo-materials;
     background-color: var(--yellow-materials);
   }
 
   .promo-instrument {
-    grid-area: promo-instrument;
     background-color: var(--extra-blue-instrument);
   }
 
@@ -555,26 +549,25 @@ body {
   }
 
   .promo-technic {
-    grid-area: promo-technic;
     background-color: var(--purple-technic);
   }
 
   .promo-sale {
-    grid-area: promo-sale;
     background-color: var(--light-green-sale);
   }
 
   .promo-delivery {
-    grid-area: promo-delivery;
     background-color: var(--yellow-delivery);
   }
 
   .main-promo-slide {
-    grid-area: main-promo-slide;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 620px;
     height: 266px;
+    box-sizing: border-box;
+    padding: 23px;
     color: var(--basic-white);
     background-color: var(--basic-dark-blue);
   }
@@ -589,21 +582,32 @@ body {
     background-repeat: no-repeat;
   }
 
+  .slide-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 104px;
+    background:var(--shadow);
+    margin: -23px;
+    padding: 23px;
+    padding-bottom: 16px;
+    box-sizing: border-box;
+  }
+
   .slide-title-h2 {
     font-size: 36px;
+    line-height: 36px;
     font-weight: 700px;
-    margin: 23px 0 0 24px;
+    margin: 0;
+    margin-bottom: 5px;
     padding: 0;
   }
 
   .slide-title-p {
     font-size: 18px;
-    margin: 20px 0 0 24px;
+    line-height: 24px;
+    margin: 0;
     padding: 0;
-  }
-
-  .main-promo-slide-link {
-    margin: 113px 0 0 24px;
   }
 
   .main-promo-slider-controls1 {
@@ -667,7 +671,7 @@ body {
   }
 
   .link-button {
-    Width: 172px;
+    width: 172px;
     min-height: 18px;
     margin-right: 14px;
     text-align: center;
@@ -706,6 +710,7 @@ body {
     font-size: 30px;
     line-height: 30px;
     margin-left: 28px;
+    width: 650px;
     color: var(--basic-blue);
     text-transform: uppercase;
   }
@@ -748,6 +753,7 @@ body {
     left: 15px;
     background-color: var(--basic-white);
     align-items: center;
+    justify-content: center;
   }
 
   .main-product-item:hover .container-button-product {
@@ -759,10 +765,8 @@ body {
   }
 
   .button-product-buy {
-    position: relative;
     width: 135px;
     min-height: 38px;
-    margin-top: 38px;
     background: var(--basic-green);
     box-shadow: inset 0px -3px 0px var(--shadow-buy);
     border-radius: 2px;
@@ -775,6 +779,7 @@ body {
     text-transform: uppercase;
     color: var(--basic-white);
     padding-left: 30px;
+    margin-bottom: 10px;
     cursor: pointer;
   }
 
@@ -788,11 +793,12 @@ body {
     outline: none;
   }
 
-  .button-product-buy::before {
+  .button-product-buy-before::before {
     content: "";
     position: absolute;
-    top: 33%;
-    left: 32px;  
+    top: 50%;
+    transform: translateY(-50%);
+    left: -25px;
     width: 15px;
     height: 15px;
     background-image: url("../img/icon-cart.svg");
@@ -801,10 +807,13 @@ body {
     opacity: 0.3;
   }
 
+  .button-product-buy-before {
+    position: relative;
+  }
+
   .button-product-bookmarks {
     width: 135px;
-    height: 38px;
-    margin-top: 10px;
+    min-height: 38px;
     background-color: var(--basic-white);
     border: 3px solid var(--basic-green);
     box-sizing: border-box;
@@ -864,21 +873,39 @@ body {
   }
 
   .button-product {
-    Width: 141px;
+    position: relative;
+    Width: 122px;
     height: 38px;
-    text-align: center;
     margin: 13px auto 21px auto;
-    background-image: url("../img/button-product.png");
-  }
-
-  .button-product a {
+    background-color: var(--basic-red);
     text-transform: uppercase;
     font-family: "PT Sans", Arial, sans-serif;
     font-size: 17px;
-    line-height: 38px;
+    line-height: 18px;
     font-weight: 700;
     color: var(--basic-white);
-    padding: 10px 32px;
+  }
+
+  .button-product::before {
+    content: "";
+    position: absolute;
+    top: 6px;
+    left: 109px;  
+    width: 26px;
+    height: 26px;
+    background-color: var(--basic-red);
+    transform: rotate(45deg);
+    z-index: 1;
+  }
+
+  .button-product span {
+    position: absolute;
+    width: 122px;
+    max-height: 38px;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .main-producer-list {
@@ -960,7 +987,7 @@ body {
 
   .services-button {
     width: 240px;
-    height: 61px;
+    min-height: 61px;
     font-family: Cuprum, Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -972,6 +999,8 @@ body {
     border: 0;
     box-shadow: 0px 1px 0px var(--basic-dark-blue), inset 0px 1px 0px var(--shadow-services-button);
     cursor: pointer;
+    box-sizing: border-box;
+    padding: 14px;
   }
 
   .services-button:hover {
@@ -1009,6 +1038,7 @@ body {
   .main-services-item h3 {
     font-family: "Cuprum", Arial, sans-serif;
     font-size: 30px;
+    line-height: 30px;
     color: var(--basic-blue);
     margin: 46px 0 0 0;
     padding: 0;
@@ -1226,11 +1256,40 @@ body {
     margin: 0 0 1px 1px;
   }
 
-  .logo-socials {
+  .socials-item-vk {
     position: absolute;
-    z-index: 1;
-    margin: auto;
-    top: 0; right: 0; bottom: 0; left: 0;
+    width: 27px;
+    height: 16px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url("../img/icon-vk.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .socials-item-f {
+    position: absolute;
+    width: 12px;
+    height: 22px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url("../img/icon-fb.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .socials-item-insta {
+    position: absolute;
+    width: 21px;
+    height: 21px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: url("../img/icon-insta.png");
+    background-position: center center;
+    background-repeat: no-repeat;
   }
 
   .footer-socials-mail {
@@ -1780,7 +1839,8 @@ body {
     content: "";
     position: absolute;
     left: -35px;
-    top: -3px;
+    top: 50%;
+    transform: translateY(-50%);
     width: 19px;
     height: 19px;
     border: 2px solid var(--basic-gray3);
@@ -1791,7 +1851,8 @@ body {
     content: "";
     position: absolute;
     left: -35px;
-    top: -3px;
+    top: 50%;
+    transform: translateY(-50%);
     width: 17px;
     height: 17px;
     border: 4px solid var(--basic-gray3);
@@ -1801,7 +1862,8 @@ body {
   .filter-input-radio:checked + label::after {
     content: "";
     position: absolute;
-    top: 5px;
+    top: 50%;
+    transform: translateY(-50%);
     left: -27px;
     width: 9px;
     height: 9px;
@@ -1814,7 +1876,8 @@ body {
     content: "";
     position: absolute;
     left: -35px;
-    top: -3px;
+    top: 50%;
+    transform: translateY(-50%);
     width: 26.17px;
     height: 23px;
     background-image: url("../img/checkbox-on.svg");
@@ -1970,7 +2033,9 @@ body {
   .description {
     min-height: 261px;
     margin-top: 59px;
+    padding-bottom: 50px;
     background: var(--basic-extra-white-footer-nav);
+    box-sizing: border-box;
   }
 
   .description-container {
